--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 
 
 
-VITE_WEATHER_URL=http://api.weatherapi.com/v1
+VITE_WEATHER_URL=https://api.weatherapi.com/v1
 
 VITE_API_KEY=1a197538c42f4e64a1e172423240409
 
