--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "deps": "^1.0.0",
+    "peer": "^1.0.2",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
